[package]
name = "rohanasan"
version = "0.4.3"
edition = "2021"
description="Rohanasan: An extremely fast backend framework for rust!"
license="MIT"
repository="https://github.com/rohanasan/rohanasan-rs"
categories = ["web-programming::http-server", "web-programming", "web-programming::websocket"]
authors = ["Rohan Vashisht"]
readme = "README.md"
keywords = ["web", "http", "server", "backend", "framework"]
publish = true

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2.153"
urldecode = "0.1.1"
async-std = { version = "1.12.0", features = ["attributes"] }