[package]
name = "rohanasan"
version = "0.4.56"
edition = "2021"
description="An extremely fast backend framework for rust! Built from scratch, easy to use and asynchronous. Available for multiple programming languages and platforms like unix, linux, mac, FreeBSD. Made using web sockets."
license="MIT"
repository="https://github.com/rohanasan/rohanasan-rs"
categories = ["web-programming::http-server", "web-programming::websocket","asynchronous","os::unix-apis","os::linux-apis"]
authors = ["Rohan Vashisht"]
readme = "README.md"
keywords = ["web", "http", "server", "backend", "framework"]
publish = true

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2.153"
urldecode = "0.1.1"
async-std = { version = "1.12.0", features = ["attributes"] }
