[dependencies.tokio]
features = ["full"]
version = "1.36.0"

[dependencies.urldecode]
version = "0.1.1"

[lib]
path = "src/lib.rs"

[package]
authors = ["Rohan Vashisht"]
categories = [
    "web-programming::http-server",
    "web-programming::websocket",
    "asynchronous",
    "os",
    "network-programming"
]
description = "An extremely fast backend framework for rust! Built from scratch using tokio, easy to use and asynchronous. Available for multiple programming languages and cross-platform."
edition = "2021"
keywords = ["web", "http", "server", "backend", "framework"]
license = "MIT"
name = "rohanasan"
publish = true
readme = "README.md"
repository = "https://github.com/rohanasan/rohanasan-rs"
version = "0.5.42"
